# Proteomic_Genomic_Cancer_KG

./: .gitignore  .gitmodules  README.md  VISUALIZATION_README.md  cptac_protein_interactions_from_stringdb.ipynb  main.ipynb  open_interactive_graph.py  pyproject.toml  run_gnn.py
docs/: 1-preprocessing.md
docs/notes/: README.md
docs/notes/.obsidian/: community-plugins.json  workspace.json
docs/notes/.obsidian/plugins/obsidian-file-path-to-uri/: main.js
docs/notes/.obsidian/plugins/obsidian-style-settings/: data.json
docs/notes/1-Concepts/: Biolink Model.md  CORD-19.md  FAIR.md  GARD.md  GRAPE.md  KG-Hub.md  KG-Microbe.md  KGX.md  Knowledge Graph.md  Koza.md  PrimeKG.md  SPOKE.md  TSV format.md
docs/notes/1-Concepts/Santos et al./: Clinical Knowledge Graph.md
docs/notes/2-Paper Notes/: 0-Highlight Guide.md  0-Template.md  A knowledge graph to interpret clinical proteomics data.md  Building a knowledge graph to enable precision medicine.md  KG-Hub—building and exchanging biological knowledge graphs.md  Validating Subtype Specific Oncology Drug Predictions.md
docs/notes/3-Notes/Oct. 1, 2025/: Oct. 1, 2025.md  Project Introductions.md
docs/notes/3-Notes/Oct. 2, 2025/: Oct. 2, 2025.md
docs/notes/3-Notes/Oct. 3, 2025/: Final Presentations.md  Oct. 3, 2025.md
docs/notes/3-Notes/Writer's Notes/: Oct. 2, 2025.md
src/: generate_reports.py  gnn_classifier.py  interactive_graph.py  knowledge_graph_structure.py  patient_metadata_parser.py  protein_abundance_processor.py  view_interactive_graph.py  visualize_knowledge_graph.py
