[project]
name = "proteomic-genomic-cancer-kg"
version = "0.1.0"
description = "Develop a graph neural network to integrate proteomic and genomic features for cancer subtype classification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.6.0",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
]
